<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createBTN"
        android:text="@string/create_database"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameET"
        android:layout_below="@id/createBTN"
        android:hint="@string/enter_the_name"
        android:nextFocusDown="@id/locationET"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationET"
        android:layout_below="@id/nameET"
        android:hint="@string/enter_the_location"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/insertBTN"
        android:text="@string/insert"
        android:layout_below="@id/locationET"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/getValuesBTN"
        android:layout_below="@id/insertBTN"
        android:text="@string/get_values"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/getValuesTV"
        android:layout_below="@id/getValuesBTN"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RV"
        android:layout_below="@id/getValuesTV"/>

</RelativeLayout>



